Alignment fixes

--- a/scss/partials/homepage.scss
+++ b/scss/partials/homepage.scss
@@ -72,7 +72,7 @@
 #newRequestButton {
 	border-radius: 4px !important;
 	padding: 8px 11.5px;
-	margin: -2px auto -2px 1rem;
+	margin: -2px 0 0 1rem;
 	margin-left: 1rem;
 
 	.fa-search {
